Add latitude and longtitude fields to admin portal for team members

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -83,115 +83,32 @@ items:
             text: Our Purpose
         team:
             heading: Meet Our Team
-            items:
-                - name: Destiny West
-                  active: True
-                  title: President
-                  img: /assets/img/team/DestinyWest.jpg
-                  mail: destiny@aerofleetone.com
-                  linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
-                  latlong: [39.771370, -104.981852]
-                  text: >
-                      A passion for aviation motivates Destiny as she enacts our ambitious business plan. She is our main public voice, administrative organizer, and strategic fulcrum.
-                - name: Greg Maud
-                  active: True
-                  title: Corporate Development
-                  img: /assets/img/team/GregMaud.jpg
-                  mail: greg@aerofleetone.com
-                  linkedin: https://www.linkedin.com/in/greg-maud-8271881b/
-                  latlong: [39.749668, -105.216019]
-                  text: >
-                      Greg brings over 20 years international experience in strategy and corporate development to Aero Fleet One. He helps develop and implement our acquisition strategy.
-                - name: Maria Dyatchyna
-                  active: True
-                  title: Research and Expansion
-                  img: /assets/img/team/MariaDyatchyna.jpg
-                  mail: maria@aerofleetone.com
-                  linkedin: https://www.linkedin.com/in/maria-dyatchyna-8ab61137/
-                  latlong: [50.436699619840184, 30.51481603417014]
-                  text: >
-                      Maria utilizes her significant experience in business development and deal-making to keep Aero Fleet One ahead of the game. She is the person to contact for any of our international affairs.
-                - name: Allan Dosan
-                  active: True
-                  title: Tech and Market Development
-                  img: /assets/img/team/AllanDosan.jpg
-                  mail: allan@aerofleetone.com
-                  linkedin: https://www.linkedin.com/in/allandosan/
-                  latlong: [44.98306165100913, -93.26148006478746]
-                  text: >
-                      Allan brings his strong background in IT integrations and cybersecurity to Aero Fleet One. He acts as our point person for all things UAS. He is our resident futurist, exploring new market possibilities.
-                - name: Mark Erjavec
-                  active: True
-                  title: Finance
-                  img: /assets/img/team/MarkErjavec.jpg
-                  mail: mark@aerofleetone.com
-                  linkedin: https://www.linkedin.com/in/markerjavec/
-                  latlong: [39.74883535119338, -105.01637690875211]
-                  text: >
-                      Mark has provided the seed and continues to help this vision grow. While managing our funding and resources, he keeps us all on track
-                - name: Ana Garcia
-                  active: True
-                  title: Business Development Latin America
-                  img: /assets/img/team/AnaGarcia.jpg
-                  mail: ana@aerofleetone.com
-                  linkedin: https://www.linkedin.com/in/ana-garcia4/
-                  latlong: [-21.158780, -47.820990]
-                  text: >-
-                      Ana is an experienced business manager in the fields of agriculture and aviation. She helps develop and implement our business strategy in Central and South America.
-                - name: Yuriy Sherayzen
-                  active: False
-                  title: Strategist
-                  img: /assets/img/team/YuriySherayzen.png
-                  mail: yuriy@aerofleetone.com
-                  linkedin: https://www.linkedin.com/in/yuriy-sherayzen-6935894/
-                  latlong: [44.943610, -93.368290]
-                  text: >-
-                      Yuriy is an experienced business analyst who helps guide our team as we move 
-                      forward with mergers and acquisitions.
-                - name: Dionas Silva
-                  active: True
-                  title: Brazilian Representative
-                  img: /assets/img/team/DionasSilva.jpg
-                  mail: dionas@aerofleetone.com
-                  linkedin: https://www.linkedin.com/in/dionas-silva-1451a8153/
-                  latlong: [-21.176630, -47.820839]
-                  text: >-
-                      As an expert agronomist and an experienced UAS pilot, Dionas is our pioneer in Brazil. He manages partnership relations in the Brazilian drone and agtech spaces.
-                - name: Matheus Picinin
-                  active: True
-                  title: Marketing Coordinator
-                  img: /assets/img/team/MatheusPicinin.jpg
-                  mail: matheus@aerofleetone.com
-                  linkedin: https://www.linkedin.com/in/matheus-raslan-a270941b4/
-                  latlong: [53.349804, -6.260310]
-                  text: >-
-                      Matheus uses his experience and training in digital media marketing to shape our brand and online presence. He manages our content staff and press relations.
-                - name: Matthew Lessard
-                  active: true
-                  title: Strategic Advisor
-                  img: /assets/img/team/MatthewLessard.jpg
-                  linkedin: https://www.linkedin.com/in/matthew-lessard-4b73ab/
-                  latlong: [44.1835832, -94.047492]
-                  text: >-
-                      Based in Minnesota, Matthew is an executive leader and entrepreneur with over 20 years of business management, financial oversight and analysis, business development, private equity, and international business experience in various countries including the US, Brazil, Mexico, and Europe.
             map:
                 offices:
                     - location: tioga
                       title: North American Headquarters
                       name: Tioga, North Dakota, USA
-                      latlong: [48.385480, -102.900970]
+                      map:
+                          lat: 48.385480
+                          long: -102.900970
                     - location: ribeirao
                       title: South American Headquarters
                       name: Ribeirão, São Paulo State, Brazil
-                      latlong: [-21.2068752671004, -47.91907593248477]
+                      map:
+                          lat: -21.2068752671004
+                          long: -47.91907593248477
                     - location: denver
                       title: Colorado Office Location
                       name: Denver, Colorado, USA
-                      latlong: [39.75929079347683, -105.00842779822192]
+                      map:
+                          lat: 39.75929079347683
+                          long: -105.00842779822192
                     - location: kiev
                       title: European Office Location
                       name: Kiev, Ukraine
-                      latlong: [50.450100, 30.523399]
+                      map:
+                          lat: 50.450100
+                          long: 30.523399
     blog:
         heading: Our Blog
         subheading: We share knowledge, news, and opinions surrounding the intersection of ag, tech, and aviation.
