--- a/admin/config.yml
+++ b/admin/config.yml
@@ -53,7 +53,7 @@ collections:
                             label: "Image",
                             name: "img",
                             widget: "image",
-                            hint: "Please make sure the image has the same minimum resolution and aspect ratio as the other images",
+                            hint: "Please make sure the image has the same minimum resolution and aspect ratio as the other images (currently 500x612)",
                         }
                       - {
                             required: false,
@@ -81,6 +81,7 @@ collections:
                             label: "Bio",
                             name: "text",
                             widget: "text",
+                            hint: "Maximum 300 characters"
                             pattern:
                                 [
                                     "^[\\s\\S]{0,300}$",
