--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,11 @@
 backend:
     name: git-gateway
-    branch: admin
+    branch: master
 publish_mode: editorial_workflow
+site_url: https://aerofleetone.com
+display_url: https://aerofleetone.com
+logo_url: /assets/img/Aero-Fleet-One-Logo.png
+show_preview_links: false
 media_folder: "assets/uploads"
 collections:
     - name: "blog"
