--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -1,116 +1,119 @@
 items:
-  - img: /assets/uploads/img_0290-2.jpeg
-    active: true
-    text: >
-      A passion for aviation motivates Destiny as she enacts our ambitious
-      business plan. She is our main public voice, administrative organizer, and
-      strategic fulcrum.
-    mail: destiny@aerofleetone.com
-    title: President
-    full_name: Destiny West
-    long: -104.981852
-    linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
-    lat: 39.77137
-  - img: /assets/img/team/GregMaud.jpg
-    active: true
-    text: >
-      Greg brings over 20 years international experience in strategy and
-      corporate development to Aero Fleet One. He helps develop and implement
-      our acquisition strategy.
-    mail: greg@aerofleetone.com
-    title: Corporate Development
-    full_name: Greg Maud
-    long: -105.216019
-    linkedin: https://www.linkedin.com/in/greg-maud-8271881b/
-    lat: 39.749668
-  - img: /assets/img/team/MariaDyatchyna.jpg
-    active: true
-    text: >
-      Maria utilizes her significant experience in business development and
-      deal-making to keep Aero Fleet One ahead of the game. She is the person to
-      contact for any of our international affairs.
-    mail: maria@aerofleetone.com
-    title: Research and Expansion
-    full_name: Maria Dyatchyna
-    long: 30.51481603417014
-    linkedin: https://www.linkedin.com/in/maria-dyatchyna-8ab61137/
-    lat: 50.436699619840184
-  - img: /assets/img/team/AllanDosan.jpg
-    active: true
-    text: >
-      Allan brings his strong background in IT integrations and cybersecurity to
-      Aero Fleet One. He acts as our point person for all things UAS. He is our
-      resident futurist, exploring new market possibilities.
-    mail: allan@aerofleetone.com
-    title: Tech and Market Development
-    full_name: Allan Dosan
-    long: -93.26148006478746
-    linkedin: https://www.linkedin.com/in/allandosan/
-    lat: 44.98306165100913
-  - img: /assets/img/team/MarkErjavec.jpg
-    active: true
-    text: >
-      Mark has provided the seed and continues to help this vision grow. While
-      managing our funding and resources, he keeps us all on track
-    location: null
-    mail: mark@aerofleetone.com
-    title: Finance
-    full_name: Mark Erjavec
-    long: -105.01637690875211
-    linkedin: https://www.linkedin.com/in/markerjavec/
-    lat: 39.74883535119338
-  - img: /assets/img/team/AnaGarcia.jpg
-    active: true
-    text: Ana is an experienced business manager in the fields of agriculture and
-      aviation. She helps develop and implement our business strategy in Central
-      and South America.
-    mail: ana@aerofleetone.com
-    title: Business Development Latin America
-    full_name: Ana Garcia
-    long: -47.82099
-    linkedin: https://www.linkedin.com/in/ana-garcia4/
-    lat: -21.15878
-  - img: /assets/img/team/YuriySherayzen.png
-    active: false
-    text: Yuriy is an experienced business analyst who helps guide our team as we
-      move  forward with mergers and acquisitions.
-    mail: yuriy@aerofleetone.com
-    title: Strategist
-    full_name: Yuriy Sherayzen
-    long: -93.36829
-    linkedin: https://www.linkedin.com/in/yuriy-sherayzen-6935894/
-    lat: 44.94361
-  - img: /assets/img/team/DionasSilva.jpg
-    active: true
-    text: As an expert agronomist and an experienced UAS pilot, Dionas is our
-      pioneer in Brazil. He manages partnership relations in the Brazilian drone
-      and agtech spaces.
-    mail: dionas@aerofleetone.com
-    title: Brazilian Representative
-    full_name: Dionas Silva
-    long: -47.820839
-    linkedin: https://www.linkedin.com/in/dionas-silva-1451a8153/
-    lat: -21.17663
-  - img: /assets/img/team/MatheusPicinin.jpg
-    active: true
-    text: Matheus uses his experience and training in digital media marketing to
-      shape our brand and online presence. He manages our content staff and
-      press relations.
-    mail: matheus@aerofleetone.com
-    title: Marketing Coordinator
-    full_name: Matheus Picinin
-    long: -6.26031
-    linkedin: https://www.linkedin.com/in/matheus-raslan-a270941b4/
-    lat: 53.349804
-  - full_name: Matthew Lessard
-    active: true
-    title: Strategic Advisor
-    img: /assets/img/team/MatthewLessard.jpg
-    linkedin: https://www.linkedin.com/in/matthew-lessard-4b73ab/
-    long: -94.047492
-    lat: 44.1835832
-    text: Based in Minnesota, Matthew is an executive leader and entrepreneur with
-      over 20 years of business management, financial oversight and analysis,
-      business development, private equity, and international business
-      experience in various countries including the US, Brazil, Mexico, and
-      Europe.
+    - img: /assets/img/team/DestinyWest.jpg
+      active: true
+      text: >
+          A passion for aviation motivates Destiny as she enacts our ambitious
+          business plan. She is our main public voice, administrative organizer, and
+          strategic fulcrum.
+      mail: destiny@aerofleetone.com
+      title: President
+      full_name: Destiny West
+      long: -104.981852
+      linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
+      lat: 39.77137
+    - img: /assets/img/team/GregMaud.jpg
+      active: true
+      text: >
+          Greg brings over 20 years international experience in strategy and
+          corporate development to Aero Fleet One. He helps develop and implement
+          our acquisition strategy.
+      mail: greg@aerofleetone.com
+      title: Corporate Development
+      full_name: Greg Maud
+      long: -105.216019
+      linkedin: https://www.linkedin.com/in/greg-maud-8271881b/
+      lat: 39.749668
+    - img: /assets/img/team/MariaDyatchyna.jpg
+      active: true
+      text: >
+          Maria utilizes her significant experience in business development and
+          deal-making to keep Aero Fleet One ahead of the game. She is the person to
+          contact for any of our international affairs.
+      mail: maria@aerofleetone.com
+      title: Research and Expansion
+      full_name: Maria Dyatchyna
+      long: 30.51481603417014
+      linkedin: https://www.linkedin.com/in/maria-dyatchyna-8ab61137/
+      lat: 50.436699619840184
+    - img: /assets/img/team/AllanDosan.jpg
+      active: true
+      text: >
+          Allan brings his strong background in IT integrations and cybersecurity to
+          Aero Fleet One. He acts as our point person for all things UAS. He is our
+          resident futurist, exploring new market possibilities.
+      mail: allan@aerofleetone.com
+      title: Tech and Market Development
+      full_name: Allan Dosan
+      long: -93.26148006478746
+      linkedin: https://www.linkedin.com/in/allandosan/
+      lat: 44.98306165100913
+    - img: /assets/img/team/MarkErjavec.jpg
+      active: true
+      text: >
+          Mark is the fund manager who helps this vision grow. While managing our financing and resources, he keeps us all on track.
+      location: null
+      mail: mark@aerofleetone.com
+      title: Finance
+      full_name: Mark Erjavec
+      long: -105.01637690875211
+      linkedin: https://www.linkedin.com/in/markerjavec/
+      lat: 39.74883535119338
+    - img: /assets/img/team/AnaGarcia.jpg
+      active: true
+      text:
+          Ana is an experienced business manager in the fields of agriculture and
+          aviation. She helps develop and implement our business strategy in Central
+          and South America.
+      mail: ana@aerofleetone.com
+      title: Business Development Latin America
+      full_name: Ana Garcia
+      long: -47.82099
+      linkedin: https://www.linkedin.com/in/ana-garcia4/
+      lat: -21.15878
+    - img: /assets/img/team/YuriySherayzen.png
+      active: false
+      text:
+          Yuriy is an experienced business analyst who helps guide our team as we
+          move  forward with mergers and acquisitions.
+      mail: yuriy@aerofleetone.com
+      title: Strategist
+      full_name: Yuriy Sherayzen
+      long: -93.36829
+      linkedin: https://www.linkedin.com/in/yuriy-sherayzen-6935894/
+      lat: 44.94361
+    - img: /assets/img/team/DionasSilva.jpg
+      active: true
+      text: As an expert agronomist and an experienced UAS pilot, Dionas is our
+          pioneer in Brazil. He manages partnership relations in the Brazilian drone
+          and agtech spaces.
+      mail: dionas@aerofleetone.com
+      title: Brazilian Representative
+      full_name: Dionas Silva
+      long: -47.820839
+      linkedin: https://www.linkedin.com/in/dionas-silva-1451a8153/
+      lat: -21.17663
+    - img: /assets/img/team/MatheusPicinin.jpg
+      active: true
+      text:
+          Matheus uses his experience and training in digital media marketing to
+          shape our brand and online presence. He manages our content staff and
+          press relations.
+      mail: matheus@aerofleetone.com
+      title: Marketing Coordinator
+      full_name: Matheus Picinin
+      long: -6.26031
+      linkedin: https://www.linkedin.com/in/matheus-raslan-a270941b4/
+      lat: 53.349804
+    - full_name: Matthew Lessard
+      active: true
+      title: Strategic Advisor
+      img: /assets/img/team/MatthewLessard.jpg
+      linkedin: https://www.linkedin.com/in/matthew-lessard-4b73ab/
+      long: -94.047492
+      lat: 44.1835832
+      text:
+          Based in Minnesota, Matthew is an executive leader and entrepreneur with
+          over 20 years of business management, financial oversight and analysis,
+          business development, private equity, and international business
+          experience in various countries including the US, Brazil, Mexico, and
+          Europe.
